# testing_branch

./: .gitignore  README.md  Readme.md  config.yaml  create_placeholders.py  gui.py  logger_config.py  pyproject.toml  requirements.txt  requiremrnts.txt  requirments.txt  setup.py  test.py
docs/: automation_guide.md  enhanced-ai-agent.md  env.md  playwright-setup-guide.md  sample.txt
frontend/: pubspec.yaml
frontend/lib/: main.dart  theme.dart
knowledge/: operations.json
knowledge/configs/: memory_policy.json  rag_config.json
src/: __init__.py  agents.py  chat_history.py  config.py  context_manager.py  crew.py  firebase_client.py  llm_manager.py  logger_config.py  main.py  memory_manager.py  pipelines.py  rag.py  settings.py  src-init.py  text_search.py  utils.py  voice_processor.py
src/agents/: agent_manager.py  automation_agent.py  base_agent.py  email_agent.py
src/automation/: app_launcher.py  automation-init.py  browser.py  browser_automation.py  chrome_automation.py  clipboard.py  desktop_automation.py  email.py  email_automation.py  file_ops.py  gui_actions.py  init.py  linux.py  macos.py  mobile.py  window.py  windows.py
src/common_functions/: Find_project_root.py  User_preference.py
src/config/: agents.yaml  tasks.yaml
src/llms/: llm_base.py  llm_gemini.py  llm_gpt.py  llm_grok.py  llm_groq.py
src/pipelines/: automation_pipeline.py  comparison_pipeline.py  handlers.py  pipelines.py
src/plugins/: calendar_plugin.py  (+1 more)
test/: exceltest.py  ppttest.py  wordtest.py
tests/: test_context_manager.py  test_llm_manager.py  test_voice_processor.py
(+130 files in other folders)
